objects/ssot__LoyaltyProgramCurrency__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyExpirationExtensionModelId__c</fullName>
        <label>Currency Expiration Extension Model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyExpirationModelId__c</fullName>
        <label>Currency Expiration Model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyTypeId__c</fullName>
        <label>Currency Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DoesAllowLedgerTracing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Ledger Tracing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__DoesAllowNegativeBalance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Negative Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationPeriodFrequencyNumber__c</fullName>
        <label>Expiration Period Frequency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationPeriodFrequencyTimeUOM__c</fullName>
        <label>Expiration Period Frequency Time UOM</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasEscrow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Escrow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Program Currency Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimary__c</fullName>
        <label>Is Primary</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramId__c</fullName>
        <label>Loyalty Program</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyTierGroupId__c</fullName>
        <label>Loyalty Tier Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QualifyingPointEndDate__c</fullName>
        <label>Qualifying Point End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__QualifyingPointStartDate__c</fullName>
        <label>Qualifying Point Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UnitCostAmount__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761182257_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramCurrency_LoyaltyProgra_rel</label>
        <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramCurrency_LoyaltyProgra_rel</relationshipLabel>
        <relationshipName>rel_1697761182257_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761182338_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramCurrency_LoyaltyTierGr_rel</label>
        <referenceTo>ssot__LoyaltyTierGroup__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramCurrency_LoyaltyTierGr_rel</relationshipLabel>
        <relationshipName>rel_1697761182338_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761184186_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgram_Id_map_LoyaltyProgram_rel</label>
        <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgram_Id_map_LoyaltyProgram_rel</relationshipLabel>
        <relationshipName>rel_1697761184186_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>